@startuml Class Diagram - Full

title Hệ thống Quản lý Ngân hàng - Class Diagram (Đầy đủ)

' ============================================
' ORGANIZATION
' ============================================

class Branch {
  - branch_id: int <<PK>>
  - branch_code: string <<UK>>
  - branch_name: string
  - address: string
  - phone: string
  - email: string
  - manager_id: int <<FK>>
  - status: enum
  - created_at: timestamp
}

class Employee {
  - employee_id: int <<PK>>
  - employee_code: string <<UK>>
  - branch_id: int <<FK>>
  - role_id: int <<FK>>
  - full_name: string
  - email: string
  - phone: string
  - username: string
  - password_hash: string
  - status: enum
  - created_at: timestamp
}

class Role {
  - role_id: int <<PK>>
  - role_name: string
  - description: string
  - created_at: timestamp
}

' ============================================
' CUSTOMER
' ============================================

class Customer {
  - customer_id: int <<PK>>
  - customer_code: string <<UK>>
  - full_name: string
  - email: string
  - phone: string
  - id_card_number: string
  - date_of_birth: date
  - gender: enum
  - address: string
  - occupation: string
  - monthly_income: decimal(18,2)
  - registered_branch_id: int <<FK>>
  - username: string
  - password_hash: string
  - status: enum
  - created_at: timestamp
}

class CreditScore {
  - score_id: int <<PK>>
  - customer_id: int <<FK>>
  - score: int
  - grade: enum
  - calculated_at: timestamp
}

' ============================================
' ACCOUNT
' ============================================

class AccountType {
  - account_type_id: int <<PK>>
  - type_code: string
  - type_name: string
  - description: string
  - min_balance: decimal(18,2)
  - interest_rate: decimal(5,2)
  - status: enum
}

class Account {
  - account_id: int <<PK>>
  - account_number: string <<UK>>
  - customer_id: int <<FK>>
  - account_type_id: int <<FK>>
  - branch_id: int <<FK>>
  - balance: decimal(18,2)
  - interest_rate: decimal(5,2)
  - opened_date: date
  - status: enum
  - created_at: timestamp
}

class Card {
  - card_id: int <<PK>>
  - card_number: string <<UK>>
  - account_id: int <<FK>>
  - card_type: enum
  - issue_date: date
  - expiry_date: date
  - status: enum
  - created_at: timestamp
}

' ============================================
' TRANSACTION
' ============================================

class TransactionType {
  - transaction_type_id: int <<PK>>
  - type_code: string
  - type_name: string
  - description: string
}

class Transaction {
  - transaction_id: bigint <<PK>>
  - transaction_code: string <<UK>>
  - transaction_type_id: int <<FK>>
  - from_account_id: int <<FK>>
  - to_account_id: int <<FK>>
  - amount: decimal(18,2)
  - fee: decimal(10,2)
  - description: string
  - balance_after: decimal(18,2)
  - status: enum
  - transaction_date: timestamp
}

' ============================================
' SAVINGS
' ============================================

class SavingsInterestRate {
  - rate_id: int <<PK>>
  - term_months: int
  - min_amount: decimal(18,2)
  - max_amount: decimal(18,2)
  - interest_rate: decimal(5,2)
  - status: enum
  - effective_from: date
  - effective_to: date
}

class SavingsDeposit {
  - deposit_id: int <<PK>>
  - deposit_number: string <<UK>>
  - customer_id: int <<FK>>
  - account_id: int <<FK>>
  - branch_id: int <<FK>>
  - principal_amount: decimal(18,2)
  - interest_rate_id: int <<FK>>
  - interest_rate: decimal(5,2)
  - term_months: int
  - start_date: date
  - maturity_date: date
  - auto_renew: enum
  - total_interest_earned: decimal(18,2)
  - status: enum
  - created_at: timestamp
}

class SavingsTransaction {
  - savings_transaction_id: int <<PK>>
  - deposit_id: int <<FK>>
  - transaction_type: enum
  - amount: decimal(18,2)
  - interest_amount: decimal(18,2)
  - description: string
  - transaction_date: timestamp
}

' ============================================
' LOAN
' ============================================

class LoanType {
  - loan_type_id: int <<PK>>
  - type_code: string
  - type_name: string
  - description: string
  - max_amount: decimal(18,2)
  - max_term_months: int
  - require_collateral: enum
}

class LoanInterestRate {
  - rate_id: int <<PK>>
  - loan_type_id: int <<FK>>
  - min_amount: decimal(18,2)
  - max_amount: decimal(18,2)
  - term_months_from: int
  - term_months_to: int
  - credit_grade: enum
  - base_rate: decimal(5,2)
  - effective_from: date
  - effective_to: date
  - status: enum
}

class Loan {
  - loan_id: int <<PK>>
  - loan_number: string <<UK>>
  - customer_id: int <<FK>>
  - account_id: int <<FK>>
  - loan_type_id: int <<FK>>
  - branch_id: int <<FK>>
  - loan_officer_id: int <<FK>>
  - loan_amount: decimal(18,2)
  - approved_amount: decimal(18,2)
  - interest_rate_id: int <<FK>>
  - interest_rate: decimal(5,2)
  - term_months: int
  - monthly_payment: decimal(18,2)
  - purpose: string
  - collateral_id: int <<FK>>
  - collateral_value: decimal(18,2)
  - ltv_ratio: decimal(5,2)
  - outstanding_balance: decimal(18,2)
  - application_date: date
  - approved_date: date
  - approved_by: int <<FK>>
  - rejection_reason: string
  - disbursement_date: date
  - first_payment_date: date
  - maturity_date: date
  - status: enum
  - created_at: timestamp
}

class LoanPaymentSchedule {
  - schedule_id: int <<PK>>
  - loan_id: int <<FK>>
  - payment_number: int
  - due_date: date
  - principal_amount: decimal(18,2)
  - interest_amount: decimal(18,2)
  - total_payment: decimal(18,2)
  - outstanding_balance: decimal(18,2)
  - status: enum
  - paid_amount: decimal(18,2)
  - paid_date: date
}

class LoanPayment {
  - payment_id: int <<PK>>
  - loan_id: int <<FK>>
  - schedule_id: int <<FK>>
  - transaction_id: bigint <<FK>>
  - payment_date: timestamp
  - principal_paid: decimal(18,2)
  - interest_paid: decimal(18,2)
  - late_fee_paid: decimal(10,2)
  - total_paid: decimal(18,2)
  - payment_method: enum
  - reference_number: string
  - notes: string
}

class CollateralType {
  - collateral_type_id: int <<PK>>
  - type_code: string
  - type_name: string
  - max_ltv: decimal(5,2)
}

class Collateral {
  - collateral_id: int <<PK>>
  - customer_id: int <<FK>>
  - collateral_type_id: int <<FK>>
  - collateral_name: string
  - description: text
  - location: string
  - certificate_number: string
  - issue_date: date
  - issue_authority: string
  - original_value: decimal(18,2)
  - appraised_value: decimal(18,2)
  - appraised_by: int <<FK>>
  - appraised_date: date
  - status: enum
  - verification_notes: string
  - created_at: timestamp
}

' ============================================
' RELATIONSHIPS
' ============================================

Branch "1" -- "*" Employee
Branch "1" -- "*" Customer
Branch "1" -- "*" Account
Role "1" -- "*" Employee

Customer "1" -- "*" Account
Customer "1" -- "0..1" CreditScore
Customer "1" -- "*" Loan
Customer "1" -- "*" Collateral
Customer "1" -- "*" SavingsDeposit

AccountType "1" -- "*" Account
Account "1" -- "*" Card
Account "1" -- "*" Transaction
Account "1" -- "*" SavingsDeposit

TransactionType "1" -- "*" Transaction

SavingsInterestRate "1" -- "*" SavingsDeposit
SavingsDeposit "1" -- "*" SavingsTransaction

LoanType "1" -- "*" Loan
LoanType "1" -- "*" LoanInterestRate
LoanInterestRate "1" -- "*" Loan
Loan "1" -- "*" LoanPaymentSchedule
Loan "1" -- "*" LoanPayment
Loan "0..1" -- "0..1" Collateral
CollateralType "1" -- "*" Collateral

Employee "1" -- "*" Loan : approves
Employee "1" -- "*" Collateral : appraises

@enduml

